# pykeedy

./: LICENSE  README.md  analysis_summary.md  main.py  naibbe.py  pyproject.toml  tox.ini  vms.txt
assets/util_scripts/: validate_encodings.py
examples/: b_vs_a_word_freqs.py  book.txt  char_and_word_cooccurence_heatmaps.py  char_and_word_distributions.py  char_and_word_ngram_freqs.py  char_and_word_positions.py  conditional_entrop_by_text_and_gramsize.py  entropy_comparison.py  filtering_basic.py  filtering_custom.py  full_analysis.py  get_vms.py  load_corpus.py  naibbe_advanced.py  naibbe_custom.py  naibbe_encode.py  naibbe_entropy.py  ngram_freqs_char_and_word.py  results.md  slots.py  word_embeddings.py  word_length.py  word_length_by_idx_in_line.py  word_length_per_text.py
examples/results/: run_all.sh
full_analysis/: manifest.json
src/examples/: ngram_freqs_char_and_word.py  test.py  test_reconstruction.py
src/pykeedy/: __init__.py  analysis.py  analyze.py  crypt.py  datastructures.py  full_analysis.py  naibbe.py  parse_analysis.py  run_test.py  slots.py  test.py  utils.py  vms.py
src/pykeedy/data/encodings/: greshko.yaml
src/pykeedy/data/plaintexts/: info  naturalis.txt
src/pykeedy/data/transliterations/: RF1b-e.txt  RF1b-er.txt
tests/: test_examples.py
